@@ -14,6 +14,8 @@ REST API
 --------
 
 * API version upgraded to 21
+* "/tools/create-dicom" can now be used to create Encapsulated 3D
+  Manufacturing Model IODs (MTL, OBJ, or STL)
 * Added a route to delete the output of an asynchronous job (right now
   only for archive jobs): e.g. DELETE /jobs/../archive
 
@@ -29,10 +31,10 @@ Maintenance
 * Fix decoding of YBR_FULL RLE images for which the "Planar Configuration" 
   tag (0028,0006) equals 1
 * Made Orthanc more resilient to common spelling errors in SpecificCharacterSet
-* Modality worklists plugin: allow searching on private tags (exact match only)
+* Modality worklists plugin: Allow searching on private tags (exact match only)
 * Fix orphan files remaining in storage when working with MaximumStorageSize
   (https://discourse.orthanc-server.org/t/issue-with-deleting-incoming-dicoms-when-maximumstoragesize-is-reached/3510)
-* When deleting a resource, its parents LastUpdate metadata are now updated
+* When deleting a resource, the "LastUpdate" metadata of its parents are now updated
 * Reduced the memory usage when downloading archives when "ZipLoaderThreads" > 0
 * Metrics can be stored either as floating-point numbers, or as integers
 * Upgraded dependencies for static builds:
